--- a/static.html
+++ b/static.html
@@ -5,6 +5,8 @@
          <h1> The Server Hostname : {{ ansible_hostname }} </h1>
          <br>
          <h1> The Server Username : {{ myusername }} </h1>
+         <br>
+         <h1> The Server Product Nmae : {{ ansible_product_name }} </h1>
          </center>
     </body>
 </html>    
